--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,8 @@
 {
   "rust-analyzer.rustfmt.extraArgs": ["+nightly"],
-  "rust-analyzer.showUnlinkedFileNotification": false
+  "rust-analyzer.showUnlinkedFileNotification": false,
+  "rust-analyzer.linkedProjects": [
+    "apps/cargo-scout/Cargo.toml",
+    "detectors/Cargo.toml"
+  ]
 }
