--- a/apps/cargo-scout/Cargo.toml
+++ b/apps/cargo-scout/Cargo.toml
@@ -6,4 +6,11 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-clap = { version = "4.2.7", features = ["derive"] }
+ansi_term = "0.12.1"
+anyhow = "1"
+atty = "0.2.14"
+cargo = "0.70"
+cargo_metadata = "0.15"
+dylint = "2.1.8"
+itertools = "0.10.5"
+glob = { version = "0.3" }
