--- a/apps/cargo-scout/Cargo.toml
+++ b/apps/cargo-scout/Cargo.toml
@@ -11,5 +11,7 @@ cargo = "0.70"
 cargo_metadata = "0.15"
 clap = { version = "4.3.0", features = ["derive"] }
 dylint = "2.1.8"
+env_logger = "0.10"
 glob = { version = "0.3" }
 itertools = "0.10.5"
+log = "0.4"
