--- a/apps/scout-extension/package.json
+++ b/apps/scout-extension/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "scout-extension",
-  "displayName": "scout-extension",
-  "description": "",
+  "name": "scout",
+  "displayName": "Scout",
+  "description": "Ink! smart contract linter",
   "version": "0.0.1",
+  "repository": "https://github.com/CoinFabrik/scout",
   "engines": {
     "vscode": "^1.78.0"
   },
@@ -17,15 +18,23 @@
     "workspaceContains:*/Cargo.toml",
     "workspaceContains:*/rust-project.json"
   ],
-  "main": "./out/extension.js",
+  "main": "./out/main.js",
   "scripts": {
-    "vscode:prepublish": "pnpm run compile",
-    "compile": "tsc -p ./",
+    "vscode:prepublish": "npm run esbuild-base -- --minify",
+    "esbuild-base": "esbuild ./src/extension.ts --bundle --outfile=out/main.js --external:vscode --format=cjs --platform=node",
+    "esbuild": "npm run esbuild-base -- --sourcemap",
+    "esbuild-watch": "npm run esbuild-base -- --sourcemap --watch",
+    "package": "pnpm vsce package --no-dependencies",
+    "publish": "pnpm vsce publish --no-dependencies",
+    "test-compile": "tsc -p ./",
     "watch": "tsc -watch -p ./",
-    "pretest": "pnpm run compile && pnpm run lint",
+    "pretest": "pnpm run test-compile && pnpm run lint",
     "lint": "eslint src --ext ts",
     "format": "prettier --write src/**/*.ts",
     "test": "node ./out/test/runTest.js"
+  },
+  "dependencies": {
+    "command-exists": "^1.2.9"
   },
   "devDependencies": {
     "@types/command-exists": "^1.2.0",
@@ -36,7 +45,7 @@
     "@typescript-eslint/eslint-plugin": "^5.59.1",
     "@typescript-eslint/parser": "^5.59.1",
     "@vscode/test-electron": "^2.3.0",
-    "command-exists": "^1.2.9",
+    "esbuild": "^0.17.19",
     "eslint": "^8.39.0",
     "glob": "^8.1.0",
     "mocha": "^10.2.0",
