--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,10 @@ target/
 # MSVC Windows builds of rustc generate these, which store debugging information
 *.pdb
 
+# Ignore Cargo.lock of library files
+test-cases/**/Cargo.lock
+detectors/Cargo.lock
+
 # -------------------------------------------------------------------------------------
 # -------------------------------------- Misc -----------------------------------------
 # -------------------------------------------------------------------------------------
