--- a/detectors/delegate-call/Cargo.toml
+++ b/detectors/delegate-call/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "delegate_call"
+name = "delegate-call"
 version = "0.1.0"
 authors = ["authors go here"]
 description = "description goes here"
