--- a/apps/cargo-scout/tests/integration_test_configuration.yaml
+++ b/apps/cargo-scout/tests/integration_test_configuration.yaml
@@ -37,7 +37,7 @@ detectors:
       - vulnerable_path: "../../test-cases/reentrancy/reentrancy-2/vulnerable-example/vault/Cargo.toml"
         remediated_path: "../../test-cases/reentrancy/reentrancy-2/remediated-example/vault/Cargo.toml"
   divide-before-multiply:
-    warning_message: "Division between two integers might return zero"
+    warning_message: "Division before multiplication might result in a loss of precision"
     examples:
       - vulnerable_path: "../../test-cases/divide-before-multiply/divide-before-multiply-1/vulnerable-example/Cargo.toml"
         remediated_path: "../../test-cases/divide-before-multiply/divide-before-multiply-1/remediated-example/Cargo.toml"
