--- a/.github/workflows/general-rust.yml
+++ b/.github/workflows/general-rust.yml
@@ -33,10 +33,10 @@ jobs:
         uses: actions/cache@v3
         with:
           path: |
-            ~/.cargo/registry
-            ~/.cargo/git
+            ~/.cargo/
             ./apps/cargo-scout/target
             ./detectors/target
+            ./test-cases/**/target
           key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
 
       - name: Update Rust
