Add workflow to CI triggers

--- a/.github/workflows/general-rust.yml
+++ b/.github/workflows/general-rust.yml
@@ -5,12 +5,14 @@ on:
     branches:
       - "main"
     paths:
+      - ".github/workflows/**"
       - "apps/cargo-scout/**"
       - "detectors/**"
       - "test-cases/**"
       - "Makefile"
   pull_request:
     paths:
+      - ".github/workflows/**"
       - "apps/cargo-scout/**"
       - "detectors/**"
       - "test-cases/**"
