--- a/test-cases/delegate-call/delegate-call-1/divider-example/Cargo.toml
+++ b/test-cases/delegate-call/delegate-call-1/divider-example/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "delegate-call"
+name = "delegate-call-divider"
 version = "0.1.0"
 edition = "2021"
 
@@ -22,12 +22,10 @@ scale = { package = "parity-scale-codec", version = "3", default-features = fals
 scale-info = { version = "2.6", default-features = false, features = ["derive"], optional = true }
 
 [dev-dependencies]
-delegate-call-divider = { path = "../divider-example" }
-delegate-call-exploiter = { path = "../exploiter-example" }
 ink_e2e = "4.2.1"
 
-[profile.dev]
+[profile.release]
 overflow-checks = false
 
-[profile.release]
+[profile.dev]
 overflow-checks = false
