--- a/test-cases/set-contract-storage/set-contract-storage-1/remediated-example/Cargo.toml
+++ b/test-cases/set-contract-storage/set-contract-storage-1/remediated-example/Cargo.toml
@@ -1,7 +1,6 @@
 [package]
 name = "set-contract-storage"
 version = "0.1.0"
-authors = ["[your_name] <[your_email]>"]
 edition = "2021"
 
 [lib]
@@ -9,15 +8,24 @@ path = "lib.rs"
 
 [features]
 default = ["std"]
-std = ["ink/std", "scale/std", "scale-info/std"]
+std = [
+    "ink/std",
+    "scale/std",
+    "scale-info/std",
+]
 ink-as-dependency = []
 e2e-tests = []
 
 [dependencies]
-ink = { version = "4.0.0", default-features = false }
+ink = { version = "4.2.1", default-features = false }
 scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
-scale-info = { version = "2.3", default-features = false, features = ["derive"], optional = true }
-ink_lang = "3.0.0"
+scale-info = { version = "2.6", default-features = false, features = ["derive"], optional = true }
 
 [dev-dependencies]
-ink_e2e = "4.0.0"
+ink_e2e = "4.2.1"
+
+[profile.dev]
+overflow-checks = false
+
+[profile.release]
+overflow-checks = false
