--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,7 @@
   "rust-analyzer.rustfmt.extraArgs": ["+nightly"],
   "rust-analyzer.showUnlinkedFileNotification": false,
   "rust-analyzer.linkedProjects": [
-    "apps/cargo-scout/Cargo.toml",
+    "apps/cargo-scout-audit/Cargo.toml",
     "detectors/Cargo.toml"
   ]
 }
