Change CI trigger for publish

--- a/.github/workflows/test-publish-cargo-scout-audit.yml
+++ b/.github/workflows/test-publish-cargo-scout-audit.yml
@@ -1,8 +1,11 @@
 name: Test Publish Cargo Scout Audit
 
 on:
-  release:
-    types: [created]
+  push:
+    branches:
+      - "main"
+    paths:
+      - "apps/cargo-scout-audit/**"
   workflow_dispatch:
 
 env:
