Improve scout extension files

--- a/apps/scout-extension/package.json
+++ b/apps/scout-extension/package.json
@@ -1,12 +1,14 @@
 {
-  "name": "scout",
-  "displayName": "Scout",
+  "name": "scout-audit",
+  "displayName": "Scout Audit",
   "description": "Ink! smart contract linter",
   "version": "0.1.0",
   "repository": "https://github.com/CoinFabrik/scout",
   "engines": {
     "vscode": "^1.78.0"
   },
+  "publisher": "CoinFabrik",
+  "icon": "assets/scout.png",
   "keywords": [
     "rust"
   ],
