--- a/apps/cargo-scout-audit/tests/integration_test_configuration.yaml
+++ b/apps/cargo-scout-audit/tests/integration_test_configuration.yaml
@@ -38,8 +38,6 @@ detectors:
         remediated_path: "../../test-cases/reentrancy/reentrancy-1/remediated-example/vault/Cargo.toml"
       - vulnerable_path: "../../test-cases/reentrancy/reentrancy-2/vulnerable-example/vault/Cargo.toml"
         remediated_path: "../../test-cases/reentrancy/reentrancy-2/remediated-example/vault/Cargo.toml"
-      - vulnerable_path: "../../test-cases/reentrancy/reentrancy-3/vulnerable-example/vault/Cargo.toml"
-        remediated_path: "../../test-cases/reentrancy/reentrancy-3/remediated-example/vault/Cargo.toml"
   divide-before-multiply:
     warning_message: "Division before multiplication might result in a loss of precision"
     examples:
@@ -65,3 +63,8 @@ detectors:
     examples:
       - vulnerable_path: "../../test-cases/zero-or-test-address/zero-or-test-address-1/vulnerable-example/Cargo.toml"
         remediated_path: "../../test-cases/zero-or-test-address/zero-or-test-address-1/remediated-example/Cargo.toml"
+  unrestricted-transfer-from:
+    warning_message: "This argument comes from a user-supplied argument"
+    examples:
+      - vulnerable_path: "../../test-cases/unrestricted-transfer-from/unrestricted-transfer-from-1/escrow/vulnerable-example/Cargo.toml"
+        remediated_path: "../../test-cases/unrestricted-transfer-from/unrestricted-transfer-from-1/escrow/remediated-example/Cargo.toml"
