Improve CI tests

--- a/.github/workflows/general-rust.yml
+++ b/.github/workflows/general-rust.yml
@@ -21,48 +21,49 @@ env:
   CARGO_TERM_COLOR: always
 
 jobs:
-  # test:
-  #   name: Test
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - name: Checkout repository
-  #       uses: actions/checkout@v3
+  scout-audit-test:
+    name: Test Scout Audit
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        test: ["panic-error"]
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
 
-  #     - name: Cache cargo-scout dependencies
-  #       id: cache-cargo-scout-dependencies
-  #       uses: actions/cache@v3
-  #       with:
-  #         path: ./apps/cargo-scout-audit/target
-  #         key: ${{ runner.os }}-cargo-${{ hashFiles('apps/cargo-scout-audit/Cargo.lock') }}
+      - name: Cache cargo-scout dependencies
+        id: cache-cargo-scout-dependencies
+        uses: actions/cache@v3
+        with:
+          path: ./apps/cargo-scout-audit/target
+          key: ${{ runner.os }}-cargo-${{ hashFiles('apps/cargo-scout-audit/Cargo.lock') }}
 
-  #     - name: Cache other dependencies
-  #       id: cache-other-dependencies
-  #       uses: actions/cache@v3
-  #       with:
-  #         path: |
-  #           ~/.cargo/registry
-  #           ~/.cargo/git
-  #           ./detectors/**/target
-  #           ./test-cases/**/target
-  #         key: ${{ runner.os }}-other-dependencies
+      - name: Cache other dependencies
+        id: cache-other-dependencies
+        uses: actions/cache@v3
+        with:
+          path: |
+            ~/.cargo/registry
+            ~/.cargo/git
+          key: ${{ runner.os }}-other-dependencies
 
-  #     - name: Update Rust
-  #       run: rustup update
+      - name: Update Rust
+        run: rustup update
 
-  #     - name: Install Rust nightly-2023-01-27
-  #       run: rustup install nightly-2023-01-27 --profile minimal
+      - name: Install Rust nightly-2023-01-27
+        run: rustup install nightly-2023-01-27 --profile minimal
 
-  #     - name: Install Rust nightly-2023-04-23
-  #       run: rustup install nightly-2023-04-23 --profile minimal
+      - name: Install Rust nightly-2023-04-23
+        run: rustup install nightly-2023-04-23 --profile minimal
 
-  #     - name: Install dylint-link
-  #       run: cargo install dylint-link
+      - name: Install dylint-link
+        run: cargo install dylint-link
 
-  #     - name: Install cargo-scout
-  #       run: cargo install --path apps/cargo-scout-audit
+      - name: Install cargo-scout
+        run: cargo install --path apps/cargo-scout-audit
 
-  #     - name: Run cargo test
-  #       run: make test
+      - name: Run tests
+        run: INTEGRATION_TESTS_TO_RUN=${{ matrix.test }} cargo test -- --nocapture
 
   fmt:
     name: Rustfmt
