--- a/apps/cargo-scout-audit/tests/integration_test_configuration.yaml
+++ b/apps/cargo-scout-audit/tests/integration_test_configuration.yaml
@@ -71,6 +71,11 @@ detectors:
       - vulnerable_path: "../../test-cases/unrestricted-transfer-from/unrestricted-transfer-from-1/escrow/vulnerable-example/Cargo.toml"
         remediated_path: "../../test-cases/unrestricted-transfer-from/unrestricted-transfer-from-1/escrow/remediated-example/Cargo.toml"
   assert-violation:
+    warning_message: "Assert causes panic. Instead, return a proper error"
+    examples:
+      - vulnerable_path: "../../test-cases/assert-violation/assert-violation-1/vulnerable-example/Cargo.toml"
+        remediated_path: "../../test-cases/assert-violation/assert-violation-1/remediated-example/Cargo.toml"
+  lazy-delegate:
     warning_message: "Delegate call with non-lazy, non-mapping storage"
     examples:
       - vulnerable_path: "../../test-cases/lazy-delegate/lazy-delegate-1/vulnerable-example/Cargo.toml"
