Added mapping to detector

--- a/test-cases/lazy-delegate/lazy-delegate-1/remediated-example/Cargo.toml
+++ b/test-cases/lazy-delegate/lazy-delegate-1/remediated-example/Cargo.toml
@@ -31,3 +31,8 @@ overflow-checks = false
 
 [profile.release]
 overflow-checks = false
+
+[workspace.metadata.dylint]
+libraries = [
+    { path = "../../../../detectors/lazy-delegate" },
+]
