--- a/test-cases/ink-version/ink-version-1/remediated-example/Cargo.toml
+++ b/test-cases/ink-version/ink-version-1/remediated-example/Cargo.toml
@@ -24,3 +24,9 @@ std = [
 ]
 ink-as-dependency = []
 e2e-tests = []
+
+[profile.dev]
+overflow-checks = false
+
+[profile.release]
+overflow-checks = false
