--- a/detectors/ink-version/Cargo.toml
+++ b/detectors/ink-version/Cargo.toml
@@ -10,12 +10,10 @@ crate-type = ["cdylib"]
 clippy_utils = { git = "https://github.com/rust-lang/rust-clippy", rev = "1480cea393d0cee195e59949eabdfbcf1230f7f9" }
 dylint_linting = "2.1.5"
 if_chain = "1.0.2"
-serde = { version = "1.0", features = ["derive"] }
-toml = "0.7.6"
-serde_json = "1.0"
-reqwest = { version = "0.11", features = ["json"] }
-tokio = { version = "1", features = ["full"] }
+reqwest = { version = "0.11", features = ["blocking", "json"] }
 semver = "1.0.4"
+serde_json = "1.0"
+toml = "0.7.6"
 
 [dev-dependencies]
 dylint_testing = "2.1.5"
