--- a/.github/workflows/test-detectors.yml
+++ b/.github/workflows/test-detectors.yml
@@ -28,8 +28,14 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Check test matrix
-        run: python scripts/check-ci-detectors.py .github/workflows/test-detectors.yml detectors
+      - name: Check test matrixc is complete
+        run: python scripts/check-ci-detectors-to-test.py .github/workflows/test-detectors.yml detectors
+
+      - name: Check detectors for repeated names
+        run: python scripts/check-detectors-repeated-names.py detectors
+
+      - name: Check detector names with underscore
+        run: python scripts/check-detectors-underscore-names.py detectors
 
   build:
     name: Build
