--- a/detectors/reentrancy-2/Cargo.toml
+++ b/detectors/reentrancy-2/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "new_reentrancy"
+name = "reentrancy-2"
 version = "0.1.0"
 authors = ["authors go here"]
 description = "description goes here"
