--- a/detectors/set-code-hash/Cargo.toml
+++ b/detectors/set-code-hash/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "unprotected-set-code-hash"
+name = "set-code-hash"
 version = "0.1.0"
 authors = ["authors go here"]
 description = "description goes here"
