--- a/detectors/unused-return-enum/Cargo.toml
+++ b/detectors/unused-return-enum/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "unused_return_enum"
+name = "unused-return-enum"
 version = "0.1.0"
 authors = ["authors go here"]
 description = "description goes here"
