--- a/.github/workflows/test-detectors.yml
+++ b/.github/workflows/test-detectors.yml
@@ -28,7 +28,7 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Check test matrixc is complete
+      - name: Check test matrix is complete
         run: python scripts/check-ci-detectors-to-test.py .github/workflows/test-detectors.yml detectors
 
       - name: Check detectors for repeated names
@@ -90,7 +90,7 @@ jobs:
           [
             "assert-violation",
             "avoid-core-mem-forget",
-            "avoid-format!-string",
+            "avoid-format-string",
             "delegate-call",
             "divide-before-multiply",
             "dos-unbounded-operation",
