Add fail on cache miss for test-detectors CI

--- a/.github/workflows/test-detectors.yml
+++ b/.github/workflows/test-detectors.yml
@@ -125,6 +125,7 @@ jobs:
             ~/.cargo
             apps/cargo-scout-audit/target
           key: ${{ runner.os }}-cargo-scout-dependencies-${{ github.run_id  }}
+          fail-on-cache-miss: true
 
       - name: Run tests
         working-directory: apps/cargo-scout-audit
