--- a/apps/cargo-scout-audit/Cargo.toml
+++ b/apps/cargo-scout-audit/Cargo.toml
@@ -25,11 +25,17 @@ anyhow = "1"
 cargo = "0.72.2"
 cargo_metadata = "0.17"
 clap = { version = "4.3.0", features = ["derive"] }
-dylint = "2.1.9"
+dylint = { path = "../dylint/dylint"}
+dylint_internal = { path = "../dylint/internal" }
+cargo-dylint = { path = "../dylint/cargo-dylint" }
 env_logger = "0.10"
 glob = { version = "0.3" }
 itertools = "0.11"
 log = "0.4"
+tempfile = "3.8"
+regex = { version = "1.5", features = ["unicode"] }
+serde_json = "1.0"
+
 
 [dev-dependencies]
 colored = "2.0.0"
