--- a/.github/workflows/test-detectors.yml
+++ b/.github/workflows/test-detectors.yml
@@ -74,7 +74,7 @@ jobs:
         run: |
           cargo new test-run
           cd test-run
-          cargo scout-audit
+          cargo scout-audit --filter delegate-call
 
       - name: Compile cargo-scout-audit tests
         working-directory: apps/cargo-scout-audit
