--- a/.github/workflows/test-detectors.yml
+++ b/.github/workflows/test-detectors.yml
@@ -65,7 +65,7 @@ jobs:
         run: rustup install nightly-2023-04-23 --profile minimal
 
       - name: Install dylint-link
-        run: cagro install dylint-link
+        run: cargo install dylint-link
 
       - name: Install cargo-scout-audit
         run: cargo install --path apps/cargo-scout-audit
