--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,6 +23,7 @@ jobs:
             archive: zip
     steps:
       - uses: actions/checkout@master
+
       - name: Compile and release
         uses: rust-build/rust-build.action@v1.4.3
         env:
@@ -30,3 +31,4 @@ jobs:
         with:
           RUSTTARGET: ${{ matrix.target }}
           ARCHIVE_TYPES: ${{ matrix.archive }}
+          SRC_DIR: apps/cargo-scout-audit
