--- a/detectors/delegate-call/Cargo.toml
+++ b/detectors/delegate-call/Cargo.toml
@@ -12,7 +12,7 @@ dylint_internal = "2.1.5"
 dylint_linting = "2.1.5"
 if_chain = "1.0.2"
 
-scout-audit-internal = { path = "../../scout-audit-internal", features = ["detector"] }
+scout-audit-internal = { path = "../../scout-audit-internal", features = ["detector", "lint_helper"] }
 
 [dev-dependencies]
 dylint_testing = "2.1.5"
