--- a/apps/cargo-scout-audit/Cargo.toml
+++ b/apps/cargo-scout-audit/Cargo.toml
@@ -32,7 +32,7 @@ anyhow = "1"
 cargo = "0.72.2"
 cargo_metadata = "0.17"
 clap = { version = "4.3.0", features = ["derive"] }
-dylint = { git = "https://github.com/CoinFabrik/dylint-scout"}
+dylint = { version = "2.3.0"}
 env_logger = "0.10"
 glob = { version = "0.3" }
 itertools = "0.11"
